--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,7 +17,7 @@
           <a href="{{ '/' | prepend: site.baseurl }}">首页</a>
         </li>
         <li>
-          <a href="{{ '/categories/' | prepend: site.baseurl }}">学习笔记</a>
+          <a href="{{ '/posts/' | prepend: site.baseurl }}">学习笔记</a>
         </li>
         <li>
           <a href="{{ '/tag' | prepend: site.baseurl }}">标签目录</a>
