--- a/_includes/header.html
+++ b/_includes/header.html
@@ -25,7 +25,7 @@
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li><a rel="nofollow" href="{{ '/reference' | prepend: site.baseurl }}">学习链接</a></li>
-        <li><a href="{{ '/effects' | prepend: site.baseurl }}">作品集</a></li>
+        <li><a href="{{ '/portfolio/' | prepend: site.baseurl }}">作品集(Web)</a></li>
         
         <li><a rel="nofollow" href="{{ '/me' | prepend: site.baseurl }}">关于我</a></li> 
         
