--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -2,7 +2,7 @@
 <div class="banner">
   <div class="container lh30">
   	{% if page.categories != null %}
-    	<a href="{{ '/categories/' | prepend: site.baseurl }}#{{ page.categories }}">{{page.categories}}</a>	/
+    	<a href="{{ '/posts/' | prepend: site.baseurl }}#{{ page.categories }}">{{page.categories}}</a>	/
     	<a href="{{ '/tag/' | prepend: site.baseurl }}#{{ page.tag }}-ref">{{page.tag}}</a>
     {% else %}
     	{{ site.banner }}
